edited Chapter DDD and edited Chatper Unit Tests

--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -74,9 +74,9 @@
 \input{211028_SWE2_DDD.tex}							% Section
 \input{211028_SWE2_DDD - Modell.tex}						% SubSection
 \input{211028_SWE2_DDD - Language.tex}						% SubSection
-\input{211028_SWE2_DDD - Visibility.tex}						% SubSection
-\input{211028_SWE2_DDD - Domain Services.tex}				% SubSection
-\input{211028_SWE2_DDD - DS Interfaces.tex}					% SubSection
+%\input{211028_SWE2_DDD - Visibility.tex}						% SubSection
+%\input{211028_SWE2_DDD - Domain Services.tex}				% SubSection
+%\input{211028_SWE2_DDD - DS Interfaces.tex}					% SubSection
 \input{211028_SWE2_DDD - Repositories.tex}					% SubSection
 \input{211028_SWE2_DDD - Aggregates.tex}					% SubSection
 \input{211028_SWE2_DDD - Entities.tex}						% SubSection
@@ -86,6 +86,7 @@
 \input{211028_SWE2_Principles.tex}						% Section
 \input{211028_SWE2_Principles - SOLID.tex}					% SubSection
 \input{211028_SWE2_Principles - GRASP.tex}					% SubSection
+\addtocontents{toc}{\protect\clearpage}			% Seitenumbruch im Inhaltsverzeichnis
 \input{211028_SWE2_Principles - DRY.tex}						% SubSection
 \input{211028_SWE2_Principles - KISS.tex}						% SubSection
 \input{211028_SWE2_Principles - YAGNI.tex}					% SubSection
@@ -93,7 +94,7 @@
 
 
 
-\addtocontents{toc}{\protect\clearpage}			% Seitenumbruch im Inhaltsverzeichnis
+
 
 \input{211028_SWE2_Tests.tex}							% Section
 \input{211028_SWE2_Refactor.tex}						% Section
@@ -110,7 +111,7 @@
 
 
 \clearpage
-\input{211028_SWE2_Fazit.tex}							% Section
+%\input{211028_SWE2_Fazit.tex}							% Section
 
 \clearpage
 \PagestyleStdSuf
