--- a/Ausarbeitung/211028_SWE2_DDD - Aggregates.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Aggregates.tex
@@ -1,12 +1,12 @@
 \newSec[DDDAgg]{Aggregates}{2}
+Entsprechend \refImg{fig:DomainMod} lässt sich im Domänenmodell ein Aggregat identifizieren:
 
-\missing[Sem5 VL8-2 Min33]
+\newSec[DDDAggDroneMod]{Drone Model}{4}
+Das Aggregat \textit{Drone Model} bildet die Funktionalität einer physisch vorhandenen Drohne ab.
 
-\missing[Sem5 VL9-1 Min6]
 
 
-\missing\
-VL DDD S74:
-Jede Entity gehört zu einem Aggregat – selbst wenn das Aggregat nur aus dieser Entity besteht
 
-Wenn keine Entities, dann auch keine Aggregate.
+
+
+
