--- a/Ausarbeitung/211028_SWE2_DDD - Modell.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Modell.tex
@@ -19,7 +19,10 @@ Das Modell in \refImg{fig:DomainMod} begrenzt sich auf die Betrachtung der Regel
 \end{center}
 
 \vspace{0.25cm}
-Die gestrichelten Pfeile deuten eine Nutzung der entsprechenden Klasse an, wobei hier kein Attribut innerhalb der ausgehenden Klasse vorgesehen.
+Die gestrichelten Pfeile deuten eine Nutzung der entsprechenden Klasse an, wobei hier kein Attribut innerhalb der ausgehenden Klasse vorgesehen.\\
+Das Aggregat wird als blauer Kasten dargestellt.\\
+Objekte, welche in Kawasaki-grün eingefärbt sind, entsprechen \textit{Entities}.\\
+Objekte, welche in hell-lila eingefärbt sind, entsprechen \textit{Value Objects}.
 \end{figure}
 
 
