--- a/Ausarbeitung/211028_SWE2_Literaturverzeichnis.tex
+++ b/Ausarbeitung/211028_SWE2_Literaturverzeichnis.tex
@@ -26,33 +26,6 @@
 
 
 
-% Unternehmen
-
-
-
-% MCU
-\NewBibItem{Intel4004}{Intel's First Microprocessor: Its invention, introduction, and lasting influence}
-\Online{https://www.intel.de/content/www/de/de/history/museum-story-of-intel-4004.html}
-\Published{\NA}, \Modified{08.04.2020}, \Requested{06.09.2021}
-
-
-
-
-
-%STM32
-
-
-
-%JTAG
-
-
-
-%Hardware
-
-
-
-%Software
-
 
 
 
@@ -65,6 +38,13 @@
 \NewBibItem{ROSObserer1}{Understanding ROS Topics}
 \Online{http://wiki.ros.org/ROS/Tutorials/UnderstandingTopics}
 \Published{\NA}, \Modified{18.07.2019}, \Requested{27.03.2022}
+
+
+
+%Testing
+\NewBibItem{gmockFAQ}{Legacy gMock FAQ}
+\Online{https://google.github.io/googletest/gmock\_faq.html}
+\Published{\NA}, \Requested{22.04.2022}
 
 
 
