--- a/Ausarbeitung/211028_SWE2_DDD - Language.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Language.tex
@@ -2,8 +2,8 @@
 
 Die Ubiquitous Language ist eine einheitliche Sprache, auf die sich Entwickler und Domänenexperten einigen und gemeinsam verwenden. In diesem Projekt ist aus Zeitgründen keine solche einheitliche Sprache definiert worden, da die Rollen \textit{Domänen-Expert*in} und \textit{Entwickler*in} von der gleichen Person eingenommen wurden. Verständnisprobleme sind hierbei nicht zu erwarten.\footnote{Aber nie ganz auszuschließen.}
 
-
-Für außenstehende hier eine kleine Übersicht: \missing[einmal in schöner schreiben. danke]
+\clearpage
+Um zukünftigen Anwendenden den Zusammenhang zwischen Domänenmodell und Code aufzuzeigen, soll anschließend eine Zuodnung von Objekten des Domänenmodells zu Klassen im Code folgen.
 \begin{table}[!ht]
 \begin{tabular}{ll}
 Domänenmodell & Klassenbezeichnung \\ \hline
@@ -13,7 +13,7 @@ Control Input & parrotTransmitter  \\
 Controller    & PoseController     \\
 Position      & Vector3D           \\
 Orientation   & Vector3D           \\
-User Input    & MainClass         
+User Input    & \ROS-Message         
 \end{tabular}
 \end{table}
 
