--- a/Ausarbeitung/211028_SWE2_DDD - Objects.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Objects.tex
@@ -1,21 +1,25 @@
 \newSec[DDDVO]{Value Objects}{2}
 
-Ein beliebiges Objekt ohne eigene Identität werden auch als \textit{Value Object} (\textit{VO}) bezeichnet.
+Ein beliebiges Objekt ohne eigene Identität wird auch als \textit{Value Object} (\textit{VO}) bezeichnet.
 Die Kategorisierung als solches ergibt sich durch die \textit{immutable}-Eigenschaft. Heraus leitet sich eine Gleichheit der Objekte bei gleichen Attribut-Werten ab.
 
+Nachfolgend werden die \textit{Value Objects} aus \refImg{fig:DomainMod} beschrieben.
 
 
-\missing\
+\newSec[DDDVOPose]{Pose}{4}
+Eine Pose ist eine mathematische Beschreibung für eine Punkt und eine Ausrichtung in einem Raum. Nimmt die Drohne eine andere Pose ein, wird hierfür eine searate Instanz generiert.
 
-Sind immer gleich bei gleichen Variablen-Werten.
-
-FixedPoint
-Unit
-Value
-TimeStamp
-Vector3D
-TimedValue
-Alle ROS\_messages
+Die von der Pose gekapselten Objekte \textit{Position} und \textit{Orientierung} werden als mathematische Vektoren im 3D-Raum abgebildet.
 
 
-\missing[Bei Beispielen: Header-Datei zeigen, weil dort nicht set-Methode vorkommt.]
+\newSec[DDDVOControlInput]{Control Input}{4}
+Der \textit{Control Input} ist ein Objekt, welches Steuerungsdaten an die physische Drohne übersendet.
+Im Sinne der Domäne entspricht das Objekt \textit{Control Input} einem \textit{Value Object}.
+Sämtliche Parameter werden bei der Initialisierung des Objekts übergeben.
+
+
+\newSec[DDDVOInput]{User Input}{4}
+Als \textit{User Input} werden regelungstechnische Führungsgrößen verstanden, welche an den Controller der Drohne übergeben werden. Diese besitzen keinen Zustand.
+
+
+
