--- a/Ausarbeitung/211028_SWE2_DDD - Repositories.tex
+++ b/Ausarbeitung/211028_SWE2_DDD - Repositories.tex
@@ -1,6 +1,3 @@
 \newSec[DDDRepo]{Repositories}{2}
-
-\missing[Sem5 VL9-1 Min12]
-
-\missing[Keine Interaktion mit persistentem Speicher => Keine Repos im Code.]
-
+In dem betrachteten Code befindet sich keine Interaktion mit persistentem Speicher. Die Regelung der Drohne wird online\footnote{\textit{online} ist in diesem Kontext ein Fachbegriff der Robotik. Hierunter wird eine unmittelbare Verarbeitung eingehender Daten verstanden.} durchgeführt und nicht innerhalb der Domäne aufgezeichnet.
+Aus den genannten Grüden folgt, dass der betrachtete Code keine \textit{Repositories} beinhaltet.
