--- a/Ausarbeitung/211028_SWE2_Problemstellung.tex
+++ b/Ausarbeitung/211028_SWE2_Problemstellung.tex
@@ -16,3 +16,4 @@ Die Problemstellung der zugrundeliegenden Studienarbeit lautet wie folgt:
 
 
 
+\missing[Erwähnen, dass nicht alle Packages des git-Repo auch hier beschrieben sind (coex ist Lagacy)]
