--- a/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
+++ b/Ausarbeitung/DefaultContent/200803_Default_Layout.tex
@@ -31,7 +31,7 @@ position=top]{caption} 				%Tabellenunterschriften, evtl. Formatieren
 \usepackage{enumerate}				%Aufzählungen: a A i I 1
 \usepackage{graphicx}				%Bilder
 
-
+\usepackage{placeins}
 
 % Verzeichnisse
 \usepackage{titletoc}				% Inhaltsverzeichnis umdefinieren
