edited Chapter Einleitung and edited Chapter Principles

--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -43,7 +43,7 @@
 
 \input{211028_SWE2_Einleitung.tex}							% Section
 \clearpage
-\input{211028_SWE2_Problemstellung.tex}					% Section
+%\input{211028_SWE2_Problemstellung.tex}					% Section
 \clearpage
 
 
@@ -88,7 +88,7 @@
 \input{211028_SWE2_Principles - GRASP.tex}					% SubSection
 \addtocontents{toc}{\protect\clearpage}			% Seitenumbruch im Inhaltsverzeichnis
 \input{211028_SWE2_Principles - DRY.tex}						% SubSection
-\input{211028_SWE2_Principles - KISS.tex}						% SubSection
+%\input{211028_SWE2_Principles - KISS.tex}						% SubSection
 \input{211028_SWE2_Principles - YAGNI.tex}					% SubSection
 \input{211028_SWE2_Principles - Conway.tex}					% SubSection
 
