--- a/Ausarbeitung/211028_SWE2_Principles - YAGNI.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - YAGNI.tex
@@ -1,17 +1,8 @@
 \newSec[PrincYAGNI]{YAGNI}{2}
-
-\missing[Sem5 VL6-2 Min36]
-
-
 \textit{YAGNI} (\textit{You ain't gonna need it}) ist ein Prizip, nach dem Code nur erzeugt wird, wenn dieser unmittelbar benötigt wird. Auch absehbar benötigte Funktionalität ist zurückzustellen.
 
-In diesem Projekt wurde dieses Prinzip aus der Präferenz des Entwicklers heraus nicht angewandt: Grundlegende Funktionalitäten werden hinzugefügt, \textit{WEIL} sie benötigt werden, nicht \textit{WENN} sie benötigt werden.
-
-
-\missing\
-Gedanklich hinundher springen??
-Widerspricht guter Planung (Danke Theresa :) )
-
+In diesem Projekt wurde dieses Prinzip aus der Präferenz des Entwicklers heraus nicht angewandt: Grundlegende Funktionalitäten werden hinzugefügt, \textit{WEIL} sie benötigt werden, nicht \textit{WENN} sie benötigt werden.\\
+An dieser Stelle unterstellen wir eine gute Projektplanung, welche einen Einsatz des YAGNI-Prinzips quasi obsolet macht.
 
 Abweichend hiervon wurde dieses Prinzip im Zusammenhang mit der Anwendung von TDD umgesetzt (siehe \refCap{TDD}).
 
