--- a/Ausarbeitung/211028_SWE2_Einleitung.tex
+++ b/Ausarbeitung/211028_SWE2_Einleitung.tex
@@ -1,8 +1,12 @@
-\newSec{Einleitung}{1}
+\newSec{Einleitung und Problemstellung}{1}
 
 Diese Ausarbeitung wird als Prüfungsleistung für das Modul \textit{Software Engineering 2} angefertigt.
 Die Inhalte basieren maßgeblich auf der zugrundeliegenden Vorlesung.
 Die Prüfungsleistung wird auf entstandenem Code einer Studienarbeit ausgeführt.
 
 
-\missing[noch auf die Gliederung eingehen]
+Die Aufgabenstellung der Studienarbeit sieht vor, ein Regelsystem für die Regelung der Position \bzw\ Pose einer Drohne (Quadrokopter) zu implementieren.\\
+\note{Im Zuge der Studienarbeit ergab sich eine Änderung der Hardware. Der in dieser Ausarbeitung betrachtete Code entspricht demnach nicht dem vollständigen im git-Repository verfügbaren Code.}
+
+
+Nachfolgend wird der Programmcode nach verschiedenen Aspekten der Software-Entwicklung analysiert. Bei den betrachteted Aspekten hält sich diese Ausarbeitung maßgeblich an die Anforderungen des Dozenten.
