--- a/Ausarbeitung/211028_SWE2_Tests.tex
+++ b/Ausarbeitung/211028_SWE2_Tests.tex
@@ -144,8 +144,8 @@ using \texttt{Google Test} with \texttt{Visual Studio}
 
 \textit{Test Driven Development} (\textit{TDD}) ist ein Prozess in der Software-Entwicklung, wonach jede Klasse \bzw\ Funktion im produktiven Code bereits im Vorfeld durch einen Test abgedeckt wird.
 
-Hierbeit unterscheidet sich das \textit{TDD} von \textit{Test First} dadurch, dass \textit{TDD} lediglich jeweils einen Test vor dem produktiven Code liegt, wobei \textit{Test First} eine beliebige Anzahl an Tests bereitstellen kann, bevor produktiver Code entsteht. \missing[Quelle die letzte Vorlesung - Sem6 VL 3 oder so?]
+Hierbeit unterscheidet sich das \textit{TDD} von \textit{Test First} dadurch, dass \textit{TDD} lediglich jeweils einen Test vor dem produktiven Code liegt, wobei \textit{Test First} eine beliebige Anzahl an Tests bereitstellen kann, bevor produktiver Code entsteht.
 
-Im zugrundeliegenden \texttt{git}-Repository wird die Entwicklung einer Klasse nach dem \textit{Test First}-Prinzip im \Branch{createFixedPoint} mit folgendem \Commit{} gestartet.
- \Commit{a4f9bd383c32a7d6d1b0be2319764a664199c2d2}
+Im zugrundeliegenden \texttt{git}-Repository wird die Entwicklung einer Klasse nach dem \textit{Test First}-Prinzip im \Branch{createFixedPoint} mit folgendem Commit gestartet.
+\Commit{a4f9bd383c32a7d6d1b0be2319764a664199c2d2}
 
