--- a/Ausarbeitung/211028_SWE2_Architektur.tex
+++ b/Ausarbeitung/211028_SWE2_Architektur.tex
@@ -4,7 +4,7 @@
 
 \newSec[ArchDepRule]{Dependency Rule}{2}
 
-Wie in \refImg{fig:ArchPkg} zu sehen, zeigen alle Abhängigkeiten in die gleiche oder eine darunterliegende Schicht. Aufrufe werden mittels \textit{virtuellen} Klassen und einer entsprechenden \DepInv\ in weiter außen liegende Klassen ermöglicht.
+Wie in \refImg{fig:ArchPkg} zu sehen, zeigen alle Abhängigkeiten in die gleiche oder eine darunterliegende Schicht. Aufrufe werden mittels \textit{virtuellen} Klassen\footnote{\textit{virtuelle} Klassen in der Sprache c++ entsprechen \textit{abstrakten} Klassen in Java.} und einer entsprechenden \DepInv\ in weiter außen liegende Klassen ermöglicht.
 
 
 \begin{figure}[ht!]
