--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -30,10 +30,10 @@
 \PagestyleStdFormal
 
 \input{DefaultContent/200803_Default_Verzeichnisse - Abbildungen.tex}
-\input{211028_SWE2_Verzeichnisse - Abkürzungen.tex}
-\input{DefaultContent/200803_Default_Verzeichnisse - Tabellen.tex}
+%\input{211028_SWE2_Verzeichnisse - Abkürzungen.tex}
+%\input{DefaultContent/200803_Default_Verzeichnisse - Tabellen.tex}
 %\input{211028_SWE2_Verzeichnisse - Formeln und Symbole.tex}
-\input{DefaultContent/200803_Default_Verzeichnisse - Codes.tex}
+%\input{DefaultContent/200803_Default_Verzeichnisse - Codes.tex}
 
 
 % Specific Content
