--- a/Ausarbeitung/211028_SWE2_Einleitung.tex
+++ b/Ausarbeitung/211028_SWE2_Einleitung.tex
@@ -10,3 +10,6 @@ Die Aufgabenstellung der Studienarbeit sieht vor, ein Regelsystem für die Regel
 
 
 Nachfolgend wird der Programmcode nach verschiedenen Aspekten der Software-Entwicklung analysiert. Bei den betrachteted Aspekten hält sich diese Ausarbeitung maßgeblich an die Anforderungen des Dozenten.
+
+Sofern nicht anders erwähnt, wird die Betrachtung des Codes auf folgendem Commit durchgeführt:
+\Commit{69bbef051d3781e02020c0f80b191117fc4bbe93}
