--- a/Ausarbeitung/211028_SWE2_Principles - DRY.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - DRY.tex
@@ -3,9 +3,9 @@ Dieses Prinzip fördert das Schonen von Ressourcen. Daher wurde dieses Prinzip i
 Sichtbar ist dies beondersbei Vererbung, da bereits vorhandene Funktionalität aus der Basisklasse übernommen wird und keine Neuimplementierung dieser stattfindet.
 \zB\\
 \CodeClass{TimedValue } erbt von \CodeClass{Value} und \CodeClass{Timestamp}, wobei nur wenige notwendige Funktionen (Konstruktoren und einfache Arithmetik) hinzugefügt werden.
-https://github.com/MobMonRob/ROSLabDrohne/blob/fe35195d45d7246eacdac0165036204d47e10ed6/Code/Domain/include/Domain/TimedValue.h
-https://github.com/MobMonRob/ROSLabDrohne/blob/fe35195d45d7246eacdac0165036204d47e10ed6/Code/Domain/include/Domain/Value.h
-https://github.com/MobMonRob/ROSLabDrohne/blob/fe35195d45d7246eacdac0165036204d47e10ed6/Code/Domain/include/Domain/Timestamp.h
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/fe35195d45d7246eacdac0165036204d47e10ed6/Code/Domain/include/Domain/TimedValue.h}{Link: Domain/TimedValue.h}\\
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/fe35195d45d7246eacdac0165036204d47e10ed6/Code/Domain/include/Domain/Value.h}{Link: Domain/Value.h}\\
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/fe35195d45d7246eacdac0165036204d47e10ed6/Code/Domain/include/Domain/Timestamp.h}{Link: Domain/Timestamp.h}
 
 
 Negativ Beispiel siehe \refCap{RefaSmellDup}.
