--- a/Ausarbeitung/211028_SWE2_Principles - GRASP.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - GRASP.tex
@@ -4,7 +4,7 @@
 Der Einsatz von \ROS\ deutet an dieser Stelle auf eine lose Kopplung hin (siehe \refCap{MusterObserver}).\footnote{vgl. Vorlesungsfolien \glq Programming Principles\grq (Seite 50)} 
 
 Durch polymorphe Methodenaufrufe liegt eine mäßige Kopplung vor. Dies wurde in der \CodeClass{ControllerSystem} der \CodeMeth{addController} umgesetzt.\\
-https://github.com/MobMonRob/ROSLabDrohne/blob/8b5d30dbdfbd41a7e10fa8d512db42cad5bb6d16/Code/Controller/include/Controller/ControllerSystem.h\#L28 ff.
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/8b5d30dbdfbd41a7e10fa8d512db42cad5bb6d16/Code/Controller/include/Controller/ControllerSystem.h\#L28}{Link: Controller/ControllerSystem.h\#L28 ff.}
 
 
 Abgesehen von den genannten Punkten ist der zugrundeliegende Code eher stark gekoppelt, da häufig statische Methodenaufrufe sowie Methodendefinitionen verwendet werden.
@@ -18,7 +18,7 @@ Methoden werden mit Attributen assoziiert und anschließend bewertet, inwiefern 
 \vspace{0.25cm}
 \begin{center}
 \fbox{\includegraphics[width=15cm]{Pictures/Cohesion_IMUable.png}}
-\caption{Ergebnisse der Unit-Tests}
+\caption{Kohäsion am Beispiel der Klasse IMUable}
 \label{fig:Cohe}
 \end{center}
 
