--- a/Ausarbeitung/211028_SWE2_Principles - SOLID.tex
+++ b/Ausarbeitung/211028_SWE2_Principles - SOLID.tex
@@ -13,7 +13,7 @@ Die Aufgabe dieser Klasse ist es, einen Wert vom Typ \CodeClass{Value} für eine
 
 
 \missing[evtl Bild?? Dann auch mit Verweis auf die jeweiligen Basis-Klassen (URI)]
-https://github.com/MobMonRob/ROSLabDrohne/blob/979c6057922852eac0af20a52e29393d41adfee5/Code/Controller/include/Controller/Input.h
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/979c6057922852eac0af20a52e29393d41adfee5/Code/Controller/include/Controller/Input.h}{Link: Controller/Input.h}
 
 
 Neben der genannten semantischen Einschätzung des zugrundeliegenden Codes soll an dieser Stelle folgendes Theorem eingeführt werden:
@@ -26,11 +26,11 @@ In unserem Projekt befinden sich 37 eingesetzte Klassen und Pakete, entgegen ste
 
 \newSec[PrincSOLIDOC]{Open/Closed Principle}{3}
 Beispiel (siehe \refImg{fig:OC}): \CodeClass{SafetyProvider} und \CodeClass{SafetyRequirement}\\
-Die Klasse \CodeClass{SafetyProvider} soll sicherstellen, dass der Flug der Drohne sicher durchgeführt werden kann. Hierzu werden verschiedene Anforderungen (\CodeClass{SafetyProvider}) hinzugefügt. Bei der \CodeClass{SafetyProvider} handelt es sich um eine \textit{full virtual} Klasse (Interface in Java). Hiervon werden die tatsächlichen Anforderungen abgeleitet.
+Die Klasse \CodeClass{SafetyProvider} soll sicherstellen, dass der Flug der Drohne sicher durchgeführt werden kann. Hierzu werden verschiedene Anforderungen (\CodeClass{SafetyProvider}) hinzugefügt. Bei der \CodeClass{SafetyProvider} handelt es sich um eine \textit{full virtual} Klasse\footnotemark{1}. Hiervon werden die tatsächlichen Anforderungen abgeleitet.
 
-https://github.com/MobMonRob/ROSLabDrohne/blob/979c6057922852eac0af20a52e29393d41adfee5/Code/Domain/include/Domain/SafetyProvider.h
-https://github.com/MobMonRob/ROSLabDrohne/blob/979c6057922852eac0af20a52e29393d41adfee5/Code/Domain/src/SafetyProvider.cpp
-https://github.com/MobMonRob/ROSLabDrohne/blob/979c6057922852eac0af20a52e29393d41adfee5/Code/Domain/include/Domain/SafetyRequirement.h
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/979c6057922852eac0af20a52e29393d41adfee5/Code/Domain/include/Domain/SafetyProvider.h}{Link: Domain/SafetyProvider.h}\\
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/979c6057922852eac0af20a52e29393d41adfee5/Code/Domain/src/SafetyProvider.cpp}{Link: Domain/SafetyProvider.cpp}\\
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/979c6057922852eac0af20a52e29393d41adfee5/Code/Domain/include/Domain/SafetyRequirement.h}{Link: Domain/SafetyRequirement.h}
 
 \begin{figure}[ht!]
 \vspace{0.25cm}
