--- a/Ausarbeitung/211028_SWE2_Tests.tex
+++ b/Ausarbeitung/211028_SWE2_Tests.tex
@@ -20,13 +20,12 @@ Es wurde darauf geachtet, den produktiv-Code vom Test-Code zu tennen. Dies wurde
 Als Nachweis über das Vorhandensein der Unit-Tests soll an dieser Stelle ein Verweis auf die jeweiligen .cpp-Dateien genügen. Diese sind durch ihren Inhalt für sich selbstsprechend. Wie allgemein wünschenswert: Alle Tests sind erfolgreich (siehe \refImg{fig:TestRes}).
 
 \begin{itemize}
-\item https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Domain/test.cpp
-\item https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_DroneController/test.cpp
-\item https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp
-\item https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Controller/test.cpp
-\item https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_PlugIn/test.cpp
+\item \href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Domain/test.cpp}{Link: Test\_Domain/test.cpp}
+\item \href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_DroneController/test.cpp}{Link: Test\_DroneController/test.cpp}
+\item \href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp}{Link: Test\_Adapter/test.cpp}
+\item \href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Controller/test.cpp}{Link: Test\_Controller/test.cpp}
+\item \href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_PlugIn/test.cpp}{Link: Test\_PlugIn/test.cpp}
 \end{itemize}
-\missing[hier Links statt der kompletten URI]
 
 \begin{figure}[ht!]
 \vspace{0.25cm}
@@ -63,8 +62,7 @@ grüner Kasten: Assert-Bereich
 Der in diesem Abschnitt beschriebene Test enthält ein Mock.
 Hier wird sichergestellt, dass die \CodeClass{PoseController} nach der Berechnung der aktuellen Pose (Übergabe des Parameters in \CodeMeth{feedbackPose}) die \CodeMeth{transmitAction} der Implementierung der \CodeClass{Transmitable} aufruft.
 
-https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Controller/test.cpp\#L15
-\missing[hier Links statt der kompletten URI]
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Controller/test.cpp\#L15}{Link: Test\_Controller/test.cpp\#L15}
 
 Ein Sonderfall ergibt sich für die \textit{Verify}-Phase des Mocks innerhalb des \textit{gmock}-Frameworks. Diese wird nicht benötigt:
 \glqq instead of checking the system state at the very end, mock objects verify that they are invoked the right way and report an error as soon as it arises, giving you a handle on the precise context in which the error was triggered. This is often more effective and economical to do than state-based testing.\grqq \cite{gmockFAQ}
@@ -91,10 +89,9 @@ Tests wurden so geschrieben, dass sich diese nicht gegenseitig beeinflussen und 
 
 Im Gegenzug wurden an diversen Stellen Tests für verschiedene parameter der selben Methode separat geschrieben. Hier würde beim Fehlerfall dieser Methode mehrere Tests scheitern.
 \zB\ Abprüfen der \CodeMeth{getMedianState}:\\
-https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp\#L110
-https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp\#L139
-https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp\#L175
-\missing[hier Links statt der kompletten URI]
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp\#L110}{Link: Test\_Adapter/test.cpp\#L110}\\
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp\#L139}{Link: Test\_Adapter/test.cpp\#L139}\\
+\href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp\#L175}{Link: Test\_Adapter/test.cpp\#L175}
 
 Um die Debug-Tätigkeit zu vereinfachen, werden für einen Fehlerfall in aufwändigeren Tests menschenlesbare Informationen über die errechneten Ergebnisse zur Verfügung gestellt\footnote{Das eingesetzte Test-Framework zeigt hier lediglich den Speicherinhalt in hexadezimalem Format an.}. HIerdurch wird das Auffinden der Ursache des Fehlers erleichtert.
 
@@ -102,13 +99,12 @@ Die Nutzung von Mocks sorgt \ua\ für eine Unabhängigkeit von Fehlerfällen and
 
 
 \newSec[TestUnitATRIPProf]{Professional}{4}
-Allgemein wurde versucht, die Lesbarkeit der Tests zu gewährleisten, indem kurze und aussagekräftig\footnote{\grq aussagekräftig\glq ist immer subjektiv} Tests geschrieben wurden.
+Allgemein wurde versucht, die Lesbarkeit der Tests zu gewährleisten, indem kurze und aussagekräftig\footnote{\glq aussagekräftig\grq\ ist immer subjektiv} Tests geschrieben wurden.
 Hierzu wurden die Abschnitte aus \refCap{TestUnitATRIP} mit doppelten Leerzeilen getrennt und zudem an geeigneten Stellen Leerzeilen zur Übersichtlichkeit eingefügt.
 
-Leider konnte dies aufgrund der Komplexität des zu testenden Use Cases nicht immer eingehalten werden:
-\zB\ https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp\#L175 (Zeilenanzahl > 25 Zeilen)
+Leider konnte dies aufgrund der Komplexität des zu testenden Use Cases nicht immer eingehalten werden.\\
+Beispiel im Code: Zeilenanzahl > 25 Zeilen\\ \href{https://github.com/MobMonRob/ROSLabDrohne/blob/9edc7b5814c1bb731abf0f7af4352289e57b681f/Code/Test\_Adapter/test.cpp\#L175}{Link: Test\_Adapter/test.cpp\#L175}
 
-\missing[hier Links statt der kompletten URI]
 
 
 
