edited Chapter Tests (Code Coverge).

--- a/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
+++ b/Ausarbeitung/211028_SWE2_Ausarbeitung.tex
@@ -86,16 +86,16 @@
 \input{211028_SWE2_Principles.tex}						% Section
 \input{211028_SWE2_Principles - SOLID.tex}					% SubSection
 \input{211028_SWE2_Principles - GRASP.tex}					% SubSection
-\addtocontents{toc}{\protect\clearpage}			% Seitenumbruch im Inhaltsverzeichnis
+
 \input{211028_SWE2_Principles - DRY.tex}						% SubSection
 %\input{211028_SWE2_Principles - KISS.tex}						% SubSection
 \input{211028_SWE2_Principles - YAGNI.tex}					% SubSection
 \input{211028_SWE2_Principles - Conway.tex}					% SubSection
 
 
+\addtocontents{toc}{\protect\clearpage}			% Seitenumbruch im Inhaltsverzeichnis
 
-
-
+\clearpage
 \input{211028_SWE2_Tests.tex}							% Section
 \input{211028_SWE2_Refactor.tex}						% Section
 
